--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ development:
 test:
   adapter: mysql2
   encoding: utf8
-  database: ear_blog_test
+  database: ars_blog_test
   pool: 5
   username: root
   password:
@@ -32,8 +32,8 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: ear_blog_production
+  database: ars_blog_production
   pool: 5
   username: root
-  password:
+  password: '1'
   socket: /var/run/mysqld/mysqld.sock
